--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhanced Accordion UI</title>
+    <title>Refined Accordion UI</title>
     <style>
         body { font-family: 'Arial', sans-serif; background-color: #f4f4f4; margin: 0; padding: 20px; }
-        .container { display: flex; justify-content: space-around; flex-wrap: wrap; gap: 20px; }
-        .accordion { background: #ffffff; border: 1px solid #ccc; box-shadow: 0 4px 6px rgba(0,0,0,0.1); border-radius: 8px; overflow: hidden; transition: box-shadow 0.3s ease-in-out; }
-        .accordion h3 { background: #007BFF; color: #ffffff; padding: 15px 20px; margin: 0; cursor: pointer; font-size: 16px; transition: background 0.3s ease; }
-        .accordion h3:hover { background: #0056b3; }
-        .panel { padding: 15px 20px; display: none; background-color: #ffffff; }
+        .container { display: flex; justify-content: center; align-items: flex-start; flex-wrap: wrap; gap: 20px; margin-top: 20px; }
+        .accordion, .sub-accordion { width: 90%; max-width: 600px; background: #ffffff; border: 1px solid #ccc; border-radius: 8px; margin-top: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+        .accordion-header, .sub-accordion-header { cursor: pointer; padding: 15px 20px; background: #007bff; color: white; font-size: 16px; transition: background-color 0.3s ease-in-out; }
+        .accordion-header:hover, .sub-accordion-header:hover { background-color: #0056b3; }
+        .accordion-content, .sub-accordion-content { display: none; padding: 10px 20px; background: white; }
         .show { display: block; }
-        .info { color: #333; line-height: 1.5; }
+        h2 { text-align: center; width: 100%; color: #333; }
     </style>
 </head>
 <body>
@@ -24,66 +24,51 @@
 
     <script type="text/babel">
         const data = {
-            Quotes: [
+            Accounts: [
                 {
-                    Id: "a00Qy00000MrvjRIAR",
-                    Name: "United Oil Refinery Generators Quote",
-                    Status__c: "Approved",
-                    Grand_Total__c: 8085.00,
-                    Quote_Valid_Until__c: "2024-11-30",
-                    Quote_Line_Items__r: {
-                        records: [
-                            {
-                                Name: "QLN-00002",
-                                Product__c: "GenWatt Diesel 1000kW",
-                                Quantity__c: 2,
-                                Unit_Price__c: 75000,
-                                Total_Price__c: 150000
-                            },
-                            {
-                                Name: "QLN-00003",
-                                Product__c: "GenWatt Propane 500kW",
-                                Quantity__c: 1,
-                                Unit_Price__c: 45000,
-                                Total_Price__c: 45000
-                            }
-                        ]
-                    }
-                }
-            ],
-            Opportunities: [
-                {
-                    Id: "006Qy000008X1BPIA0",
-                    Name: "United Oil Refinery Generators",
-                    StageName: "Proposal/Price Quote",
-                    Amount: 270000,
-                    CloseDate: "2024-09-20",
-                    Owner: {
-                        Name: "Rajasekar M"
-                    }
-                },
-                {
-                    Id: "006Qy000008X1BQIA0",
-                    Name: "United Oil SLA",
-                    StageName: "Closed Won",
-                    Amount: 120000,
-                    CloseDate: "2024-09-27",
-                    Owner: {
-                        Name: "Rajasekar M"
-                    }
+                    Id: "001Qy00000XbvUxIAJ",
+                    Name: "United Oil & Gas Corp.",
+                    Opportunities: [
+                        {
+                            Id: "006Qy000008X1BPIA0",
+                            Name: "United Oil Refinery Generators",
+                            Quotes: [
+                                {
+                                    Id: "a00Qy00000MrvjRIAR",
+                                    Name: "United Oil Refinery Generators Quote",
+                                    QuoteLineItems: [
+                                        {
+                                            Id: "a01Qy00000XniZaIAJ",
+                                            ProductName: "GenWatt Diesel 1000kW",
+                                            Quantity: 2,
+                                            UnitPrice: 75000,
+                                            TotalPrice: 150000
+                                        },
+                                        {
+                                            Id: "a01Qy00000XniZbIAJ",
+                                            ProductName: "GenWatt Propane 500kW",
+                                            Quantity: 1,
+                                            UnitPrice: 45000,
+                                            TotalPrice: 45000
+                                        }
+                                    ]
+                                }
+                            ]
+                        }
+                    ]
                 }
             ]
         };
 
-        function Accordion({ title, details }) {
+        function SubAccordion({ title, content }) {
             const [isOpen, setIsOpen] = React.useState(false);
             return (
-                <div className="accordion">
-                    <h3 onClick={() => setIsOpen(!isOpen)}>{title}</h3>
-                    <div className={isOpen ? 'panel show' : 'panel'}>
-                        <ul className="info">
-                            {details.map((detail, idx) => (
-                                <li key={idx}>{detail}</li>
+                <div className="sub-accordion">
+                    <div className="sub-accordion-header" onClick={() => setIsOpen(!isOpen)}>{title}</div>
+                    <div className={isOpen ? 'sub-accordion-content show' : 'sub-accordion-content'}>
+                        <ul>
+                            {content.map(item => (
+                                <li key={item.Id}>{`${item.ProductName} - Quantity: ${item.Quantity}, Unit Price: $${item.UnitPrice}, Total Price: $${item.TotalPrice}`}</li>
                             ))}
                         </ul>
                     </div>
@@ -91,28 +76,37 @@
             );
         }
 
+        function Accordion({ title, quotes }) {
+            const [isOpen, setIsOpen] = React.useState(false);
+            return (
+                <div className="accordion">
+                    <div className="accordion-header" onClick={() => setIsOpen(!isOpen)}>{title}</div>
+                    <div className={isOpen ? 'accordion-content show' : 'accordion-content'}>
+                        {quotes.map(quote => (
+                            <SubAccordion key={quote.Id} title={quote.Name} content={quote.QuoteLineItems} />
+                        ))}
+                    </div>
+                </div>
+            );
+        }
+
+        function Account({ account }) {
+            return (
+                <div>
+                    <h2>{account.Name}</h2>
+                    {account.Opportunities.map(opp => (
+                        <Accordion key={opp.Id} title={opp.Name} quotes={opp.Quotes} />
+                    ))}
+                </div>
+            );
+        }
+
         function App() {
             return (
                 <div className="container">
-                    <div>
-                        {data.Quotes.map((quote, index) => (
-                            <Accordion key={index} title={quote.Name} details={[
-                                `Status: ${quote.Status__c}`,
-                                `Total: $${quote.Grand_Total__c.toFixed(2)}`,
-                                `Valid Until: ${quote.Quote_Valid_Until__c}`
-                            ]} />
-                        ))}
-                    </div>
-                    <div>
-                        {data.Opportunities.map((opp, index) => (
-                            <Accordion key={index} title={opp.Name} details={[
-                                `Stage: ${opp.StageName}`,
-                                `Amount: $${opp.Amount.toFixed(2)}`,
-                                `Close Date: ${opp.CloseDate}`,
-                                `Owner: ${opp.Owner.Name}`
-                            ]} />
-                        ))}
-                    </div>
+                    {data.Accounts.map(account => (
+                        <Account key={account.Id} account={account} />
+                    ))}
                 </div>
             );
         }
